[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attackmap-analyzer-rust"
version = "0.1.0"
description = "Rust ecosystem analyzer plugin for AttackMap (axum, actix-web, rocket; sqlx/diesel/sea-orm; jsonwebtoken/argon2; reqwest)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "AttackMap Contributors"}
]
dependencies = [
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
core = [
  "attackmap>=0.1.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.entry-points."attackmap.analyzers"]
rust = "attackmap_analyzer_rust:RustAnalyzer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
